# christian-social-intuition

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.lock.txt  sitecustomize.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
christian_social_intuition/: __init__.py
configs/: experiment.yaml  frames.yaml
data/: README.md
data/processed/: candidate_pool_v1.jsonl  dev_items_locked_v1.jsonl  eval_items_locked_v1.jsonl  item_review_v1.csv
docs/: README.md  abstract_draft.md  annotation_rubric.md  conclusion_draft.md  discussion_draft.md  ethics_broader_impacts_draft.md  frame_selection_protocol.md  introduction_draft.md  item_audit.md  limitations_draft.md  methods_draft.md  paper_draft.md  paper_outline.md  related_work_draft.md  results_draft.md  reviewer_risk_memo.md  revision_plan_v2.md  revision_summary_table.md  theoretical_framing_draft.md
docs/final_revision/: appendix_draft.md  appendix_stats_table.md  avoid_claims.md  figure_titles_captions.md  final_revision_plan.md  main_text_sections.md  main_text_stats_table.md  reviewer_risk_memo_final.md  revision_checklist.md  safe_claims.md
outputs/: README.md
outputs/analysis/: final_readout.md
outputs/runs/: qwen2.5_0.5b_instruct_eval_v2.jsonl  qwen2.5_0.5b_instruct_eval_v2.manifest.json  qwen2.5_7b_instruct_eval_v2.jsonl  qwen2.5_7b_instruct_eval_v2.manifest.json
paper/: README.md  main.tex
requirements/: runtime.lock.txt
tests/: test_analysis.py  test_build_items.py  test_paired_stats.py  test_parsing.py  test_text_metrics.py
(+31 files in other folders)
