[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "christian-social-intuition"
version = "0.1.0"
description = "Stage-separated Christian framing x Social Intuitionist experiment harness for LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "Pillow>=10.4,<11",
  "PyYAML>=6.0",
  "scipy>=1.13,<1.14",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
csi-sim = "christian_social_intuition.cli:main"

[project.urls]
Repository = "https://github.com/hanzhenzhujene/christian-social-intuition"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
